palmer/k8s/ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: palmer-ui
  namespace: palmer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: palmer-ui
  template:
    metadata:
      labels:
        app: palmer-ui
    spec:
      containers:
      - name: ui
        image: palmer-ui:0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8501
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
