palmer/k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: palmer-api
  namespace: palmer
spec:
  selector:
    app: palmer-api
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: ClusterIP
