palmer/k8s/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: palmer-ui
  namespace: palmer
spec:
  selector:
    app: palmer-ui
  ports:
  - name: http
    port: 80
    targetPort: 8501
  type: ClusterIP
